fix: switch date section now scroll on overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -153,3 +153,23 @@ body {
 .cardrotate:hover {
     transform: perspective(1000px) rotateX(0deg) rotateY(0deg) ;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background-color: --color-background;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
